--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
         <div class="hero-image">
             <!-- Replace with your professional photo -->
-            <img src="/img/dar.jpg" alt="Professional headshot of [Your Name]">
+            <img src="/portfolio/img/dar.jpg" alt="Professional headshot of [Your Name]">
         </div>
         
     </section>
