--- a/index.html
+++ b/index.html
@@ -124,21 +124,21 @@
         <h2>Featured Work</h2>
         <div class="projects-container">
             <div class="project-card">
-                <img src="/img/thesis3.png" alt="Project 1">
+                <img src="/portfolio/img/thesis3.png" alt="Project 1">
                 <h3>Poultry Guard</h3>
                 <p>A monitoring system that integrates a thermal camera and video camera to detect, mitigate, and alert farm owners about heat stress in chickens. 
                     The system provides real-time analysis, automated responses, and notifications to ensure optimal poultry health and welfare.</p>
                 <a href="portfolio.html#project1" class="btn small-btn">View Details</a>
             </div>
             <div class="project-card">
-                <img src="/img/embedded.jpg" alt="Project 2">
+                <img src="/portfolio/img/embedded.jpg" alt="Project 2">
                 <h3>Hand2Hand</h3>
                 <p> A glove-based communication device that notifies and alarms nearby family members
                     when the patient who has difficulty speaking has a need.</p>
                 <a href="portfolio.html#project2" class="btn small-btn">View Details</a>
             </div>
             <div class="project-card">
-                <img src="/img/online lib.png" alt="Project 3">
+                <img src="/portfolio/img/online lib.png" alt="Project 3">
                 <h3>Feu Tech Online Library</h3>
                 <p>Streamlines the reservation and scheduling of books and e-books, also creates a profile for every user indicating their borrowing history
                     and favorites.
