--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,7 @@
             <!-- Competition 1 -->
             <div class="competition-item">
                 <div class="competition-image5">
-                    <img src="/img/icare.png" alt="National Robotics Competition">
+                    <img src="/portfolio/img/icare.png" alt="National Robotics Competition">
                 </div>
                 <span class="competition-badge"> HTML,CSS,PhP,Java</span>
                 <h3 class="competition-title"> iCare Website</h3>
@@ -59,7 +59,7 @@
             <!-- Competition 2 -->
             <div class="competition-item">
                 <div class="competition-image5">
-                    <img src="/img/online lib.png" alt="National Robotics Competition">
+                    <img src="/portfolio/img/online lib.png" alt="National Robotics Competition">
                 </div>
                 <span class="competition-badge"> HTML,CSS,PhP,Java,Firebase                </span>
                 <h3 class="competition-title"> FEU Tech Online Library </h3>
@@ -78,7 +78,7 @@
             <!-- Competition 3 -->
             <div class="competition-item">
                 <div class="competition-image5">
-                    <img src="/img/pawto.jpg" alt="National Robotics Competition">
+                    <img src="/portfolio/img/pawto.jpg" alt="National Robotics Competition">
                 </div>
                 <span class="competition-badge">Arduino, C++</span>
                 <h3 class="competition-title">PawToFeeder</h3>
@@ -95,7 +95,7 @@
             <!-- Competition 4 -->
             <div class="competition-item">
                 <div class="competition-image4">
-                    <img src="/img/embedded.jpg" alt="National Robotics Competition">
+                    <img src="/portfolio/img/embedded.jpg" alt="National Robotics Competition">
                 </div>
                 <span class="competition-badge">Arduino,C++</span>
                 <h3 class="competition-title">Hand2Hand</h3>
@@ -113,7 +113,7 @@
             <!-- Competition 5 -->
             <div class="competition-item">
                 <div class="competition-image5">
-                    <img src="/img/thesis.jpg" alt="National Robotics Competition">
+                    <img src="/portfolio/img/thesis.jpg" alt="National Robotics Competition">
                 </div>
                 <span class="competition-badge">HTML, CSS, Python, Javascript, OpenCV, Arduino, C++, IoT, Machine Learning</span>
                 <h3 class="competition-title">Poultry Guard</h3>
@@ -131,7 +131,7 @@
             <!-- Competition 6 -->
             <div class="competition-item">
                 <div class="competition-image6">
-                    <img src="/img/WAREHOUSE.png" alt="National Robotics Competition">
+                    <img src="/portfolio/img/WAREHOUSE.png" alt="National Robotics Competition">
                 </div>
                 <span class="competition-badge">AutoCAD</span>
                 <h3 class="competition-title">Warehouse Floor Plan</h3>
