--- a/projects.html
+++ b/projects.html
@@ -148,7 +148,7 @@
              <!-- Competition 6 -->
              <div class="competition-item">
                 <div class="competition-image6">
-                    <img src="/img/floorplan.png" alt="National Robotics Competition">
+                    <img src="/portfolio/img/floorplan.png" alt="National Robotics Competition">
                 </div>
                 <span class="competition-badge">AutoCAD</span>
                 <h3 class="competition-title">Floor and Elevation Plan</h3>
