--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 Let’s build something great together!</p>
             <div class="hero-buttons">
                 <a href="contact.html" class="btn primary-btn">Get in Touch</a>
-                <a href="resume.pdf" class="btn secondary-btn">Download Resume</a>
+                <a href="https://drive.google.com/file/d/1Lxs986eCwERGJiK6D8BY2o9i-jzDuDmg/view" target="_blank" class="btn secondary-btn">Download Resume</a>
             </div>
         </div>
         <div class="hero-image">
