--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,7 @@
             <!-- Competition 1 -->
             <div class="competition-item">
                 <div class="competition-image5">
-                    <img src="/portfolio/img/icare.png" alt="National Robotics Competition">
+                    <img src="img/icare.png" alt="National Robotics Competition">
                 </div>
                 <span class="competition-badge"> HTML,CSS,PhP,Java</span>
                 <h3 class="competition-title"> iCare Website</h3>
