--- a/competitions.html
+++ b/competitions.html
@@ -40,7 +40,7 @@
             <!-- Competition 1 -->
             <div class="competition-item">
                 <div class="competition-image">
-                    <img src="/portfolio/img/AWARDS.jfif" alt="National Robotics Competition">
+                    <img src="/img/AWARDS.jfif" alt="National Robotics Competition">
                 </div>
                 <span class="competition-badge">1st Place</span>
                 <h3 class="competition-title">Synergy Hackathon: Top 5 Software Solution</h3>
@@ -58,7 +58,7 @@
             <!-- Competition 2 -->
             <div class="competition-item">
                 <div class="competition-image">
-                    <img src="/portfolio/img/regional.jpg" alt="National Robotics Competition">
+                    <img src="/img/regional.jpg" alt="National Robotics Competition">
                 </div>
                 <span class="competition-badge">Champion</span>
                 <h3 class="competition-title">MRSP NCR Robotics Competition </h3>
@@ -77,7 +77,7 @@
             <!-- Competition 3 -->
             <div class="competition-item">
                 <div class="competition-image">
-                    <img src="/portfolio/img/runner up.jpg" alt="National Robotics Competition">
+                    <img src="/img/runner up.jpg" alt="National Robotics Competition">
                 </div>
                 <span class="competition-badge">1st Place</span>
                 <h3 class="competition-title">CPE Challenge:Pitching</h3>
@@ -93,7 +93,7 @@
             <!-- Competition 4 -->
             <div class="competition-item">
                 <div class="competition-image4">
-                    <img src="/portfolio/img/NCR.jpg" alt="National Robotics Competition">
+                    <img src="/img/NCR.jpg" alt="National Robotics Competition">
                 </div>
                 <span class="competition-badge">Finalist</span>
                 <h3 class="competition-title">National Robotics Competition</h3>
@@ -111,7 +111,7 @@
             <!-- Competition 5 -->
             <div class="competition-item">
                 <div class="competition-image5">
-                    <img src="/portfolio/img/dict.jpg" alt="National Robotics Competition">
+                    <img src="/img/dict.jpg" alt="National Robotics Competition">
                 </div>
                 <span class="competition-badge">Finalist</span>
                 <h3 class="competition-title">DICT Regional Pitching Competition</h3>
@@ -129,7 +129,7 @@
             <!-- Competition 6 -->
             <div class="competition-item">
                 <div class="competition-image6">
-                    <img src="/portfolio/img/techup.jfif" alt="National Robotics Competition">
+                    <img src="/img/techup.jfif" alt="National Robotics Competition">
                 </div>
                 <span class="competition-badge">Top 10 Finalist</span>
                 <h3 class="competition-title">PhilDev Inter University Innovation Challenge </h3>
@@ -157,7 +157,7 @@
             <!-- Competition 1 -->
             <div class="competition-item">
                 <div class="competition-image4">
-                    <img src="/portfolio/img/1ST TPS.jpg" alt="National Robotics Competition">
+                    <img src="/img/1ST TPS.jpg" alt="National Robotics Competition">
                 </div>
                 <span class="competition-badge">TOP 3</span>
                 <h3 class="competition-title">Top Performing Student</h3>
@@ -174,7 +174,7 @@
             <!-- Competition 2 -->
             <div class="competition-item">
                 <div class="competition-image4">
-                    <img src="/portfolio/img/3RDTPS.jfif" alt="National Robotics Competition">
+                    <img src="/img/3RDTPS.jfif" alt="National Robotics Competition">
                 </div>
                 <span class="competition-badge">TOP 7</span>
                 <h3 class="competition-title">Top Performing Student</h3>
@@ -192,7 +192,7 @@
             <!-- Competition 3 -->
             <div class="competition-item">
                 <div class="competition-image4">
-                    <img src="/portfolio/img/ROBOTICS.jfif" alt="National Robotics Competition">
+                    <img src="/img/ROBOTICS.jfif" alt="National Robotics Competition">
                 </div>
                 <span class="competition-badge">Champion</span>
                 <h3 class="competition-title">National Robotics Competition</h3>
@@ -209,7 +209,7 @@
             <!-- Competition 4 -->
             <div class="competition-item">
                 <div class="competition-image7">
-                    <img src="/portfolio/img/TECHUPASR.jfif" alt="National Robotics Competition">
+                    <img src="/img/TECHUPASR.jfif" alt="National Robotics Competition">
                 </div>
                 <span class="competition-badge">Finalist</span>
                 <h3 class="competition-title">PhilDev Tech Up Finalist</h3>
@@ -227,7 +227,7 @@
             <!-- Competition 5 -->
             <div class="competition-item">
                 <div class="competition-image5">
-                    <img src="/portfolio/img/SYNERGY.jfif" alt="National Robotics Competition">
+                    <img src="/img/SYNERGY.jfif" alt="National Robotics Competition">
                 </div>
                 <span class="competition-badge">1st Place</span>
                 <h3 class="competition-title">Synergy Hackathon</h3>
