--- a/certifications.html
+++ b/certifications.html
@@ -15,11 +15,10 @@
             <a href="certifications">DG</a>
         </div>
         <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
+           <li><a href="index.html">Home</a></li>
             <li><a href="projects.html">Projects</a></li>
-            <li><a href="competitions.html">Competitions</a></li>
+            <li><a href="competitions.html">Competitions and Awards</a></li>
             <li><a href="certifications.html">Certifications</a></li>
-            <li><a href="education.html">Education</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
         <div class="burger">
