--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 Let's build something great together!</p>
             <div class="hero-buttons">
                 <a href="contact.html" class="btn primary-btn" id="contactBtn">Get in Touch</a>
-                <a href="/files/Daryl N. Guerzon - FEU TECH.pdf" target="_blank" class="btn secondary-btn">Download Resume</a>
+                <a href="https://drive.google.com/file/d/1lUKLN9TsIzFaoy6BZ70QxowKjv8Limdc/view?usp=sharing" target="_blank" class="btn secondary-btn">Download Resume</a>
             </div>
         </div>
         <div class="hero-image">
